# harvest-api

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  README.md  circle.yml  harvest-api.cabal  stack.yaml
Web/Harvest/: API.hs
Web/Harvest/API/: Type.hs
data-examples/: daily.json  people.json
tests/Web/Harvest/: APISpec.hs
