name:                 harvest-api
version:              0.1.0
cabal-version:        >= 1.10
license:              AllRightsReserved
license-file:         LICENSE.md
author:               Stack Builders
maintainer:           Stack Builders
homepage:             https://github.com/stackbuilders/harvest-api
bug-reports:          https://github.com/stackbuilders/harvest-api/issues
category:             Web
synopsis:             Bindings for Harvest API
build-type:           Simple
description:          Bindings for Harvest API.
extra-source-files:   CHANGELOG.md
                    , README.md

source-repository head
  type:               git
  location:           https://github.com/stackbuilders/harvest-api.git

flag dev
  description:        Turn on development settings.
  manual:             True
  default:            False

library
  build-depends:      base             >= 4.8 && < 5
                    , http-client      >= 0.4.26
                    , http-client-tls  >= 0.2.4
                    , servant          >= 0.7
                    , servant-client   >= 0.7
  exposed-modules:    Web.Harvest.API
                    , Web.Harvest.API.Type
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010

test-suite tests
  main-is:            Spec.hs
  hs-source-dirs:     tests
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5
                    , harvest-api      >= 0.1.0
  -- other-modules:      Module
  if flag(dev)
    ghc-options:      -Wall -Werror
  else
    ghc-options:      -O2 -Wall
  default-language:   Haskell2010
